@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Add client side plumbing for estimated test install time from OpenBenchmarking.org
+pts-core: Add estimate-install-time sub-command
 
 Phoronix Test Suite 9.8.0 Milestone 1
 3 June 2020
